# vehicle_model_pkg

./: CMakeLists.txt  README.md  frames.gv  package.xml
description/: G35.urdf  Prowler.urdf  wheel_2004_Infiniti_G35_Sedan.dae  wheel_2004_Infiniti_G35_Sedan_rot.dae
garage/: G35.yaml  Prowler.yaml  test.yaml
include/vehicle_model/: vehicle_model.h
include/vehicle_model_pkg/: dynamic_model_node.h  kinematic_model_node.h  vehicle_model.h  vm_ekf.h  vm_ekf_node.h
scripts/: g35_tf_broadcaster.py  g35_tf_broadcaster2.py  marker_handler.py  tf_handler.py
src/: dynamic_model_node.cpp  kinematic_model_node.cpp  vehicle_model.cpp  vm_ekf.cpp  vm_ekf_node.cpp
